set the height of the slide to 100 to avoid jumping after re-sizeing.

--- a/less/main.less
+++ b/less/main.less
@@ -161,8 +161,8 @@ h2 {
 .slide {
 	z-index:10;
 	padding:0 20px 120px 20px;
+	min-height: 1000px;
 	.box-shadow(0px, -3px, 0px, rgba(0,0,0,0.3));
-	//border-bottom: 5px solid #CCC;
 	&#frontPage {
 		background-color:rgba(0,0,0,0.6);
 		color:#FFF;
